Added styles to generate page

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -4,25 +4,21 @@
     height: 70px;
     color: #fff;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between; /* updated from space-around to space-between for better spacing */
     align-items: center;
     border-bottom: 1px solid rgba(233, 237, 244, 0.25);
+    padding: 0 5em; /* added horizontal padding for better spacing */
 }
 
 .logo {
-    position: absolute;
     width: 154px;
     height: 24px;
-    left: 5em;
-    top: 23px;
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 800;
     font-size: 30px;
     line-height: 24px;
-    /* identical to box height, or 60% */
     color: #FFFFFF;
-
 }
 
 .navList {
@@ -49,38 +45,23 @@
 }
 
 .buttons {
-    /* buttons */
-    /* Auto layout */
-    /* desktop/title medium */
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 32px;
-    /* identical to box height, or 178% */
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     padding: 0px;
     gap: 10px;
-
-    position: absolute;
-    width: 237px;
-    height: 60px;
-    left: 81em;
-    top: 10px;
 }
 
 .signup {
     width: 100px;
     height: 50px;
-
-    /* light/white 15% */
-
     border: 2px solid rgba(255, 255, 255, 0.15);
     border-radius: 100px;
-
-    /* Inside auto layout */
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -89,15 +70,10 @@
 .login {
     width: 100px;
     height: 50px;
-    /* light/white */
-
     background: #FFFFFF;
     border-radius: 100px;
     color: black;
-    /* Inside auto layout */
-
     flex: none;
     order: 1;
     flex-grow: 0;
 }
-
