--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -219,3 +219,11 @@
   background: #FFFFFF;
   border-radius: 100px;
 }
+
+@media (max-width: 1200px) {
+  
+  .flashcards {
+    display: none;
+  }
+}
+
